# velvet-beautifier

./: .gitignore  AboutWindow.cs  AboutWindow.resx  BackupManager.cs  CLI.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  Config.cs  ExtractionWindow.Designer.cs  ExtractionWindow.cs  GUI.md  GUIDE.md  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Mod.cs  ModInfo.cs  ModManager.cs  PATCH.md  PROCESS.md  Program.cs  README.md  SECURITY.md  TFHResourceMod.cs  TFHResourceUtils.cs  TODO.md  Utils.cs  Velvet.cs  VelvetBeautifier.csproj  VelvetBeautifier.sln  clean.ps1  release.ps1  release.sh  test.ps1
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release.yml
Application/: Application.cs  Application.csproj
CLI/: CLI.csproj  CommandLine.cs  Program.cs
CLI/GUI/: AboutDialog.cs  GuiCommand.cs  MainTopLevel.cs  MenuBar.cs  ModListView.cs
GFS/: GFS.csproj  Utils.cs
GUI/: CreateModWindow.cs  EditConfigurationWindow.cs  GUI.csproj  InstallModTextWindow.cs  MainWindow.cs  MainWindow.glade  Program.cs  Utils.cs  VelvetBeautifier.glade  VelvetGtk.cs
GUI/GUI/: About.cs  CreateModForm.cs  GUI.csproj  InstallTextModForm.cs  MainForm.cs  Utils.cs  VelvetEto.cs
GUI/GUI.Gtk/: GUI.Gtk.csproj  Program.cs
GUI/GUI.Mac/: GUI.Mac.csproj  Info.plist  Program.cs
GUI/GUI.Wpf/: GUI.Wpf.csproj  Program.cs
GUI/Items/: MenuBar.cs  ToolBar.cs
GameBanana/: Error.cs  GameBanana.csproj  Mod.cs  ModFile.cs  Utils.cs
Modding/: Mod.cs  ModDB.cs  ModInfo.cs  ModInstallResult.cs  Modding.csproj  TFHResourceModding.cs
Patching/: IPatchSegement.cs  Patch.cs  PatchArrayIndexSegment.cs  PatchPropertySegement.cs  PatchSegementType.cs  PatchType.cs  PatchUtils.cs  PatchValue.cs  Patching.csproj
Properties/: Resources.Designer.cs  Resources.resx
TFHResource/: TFHResource.csproj  TFHResourceMod.cs  TFHResourceUtils.cs
Tool/: Program.cs  Tool.csproj
Tool/CLI/: GuiCommand.cs
Tool/GUI/: AboutDialog.cs  MainTopLevel.cs  MenuBar.cs  MenuBarUtilities.cs  ModDetails.cs  ModListView.cs  StatusBarUtilities.cs
Utilities/: BackupManager.cs  CommandLineResult.cs  Config.cs  Crypto.cs  Dotnet.cs  DownloadManager.cs  EpicGames.cs  FileSystem.cs  Game.cs  GameFiles.cs  IO.cs  PID.cs  Special.cs  Steam.cs  Url.cs  Utilities.csproj  Utils.cs  Velvet.cs  Win32.cs
VelvetBeautifier/: Application.cs  ModLoaderTool.cs  README.md  VelvetBeautifier.csproj
VelvetBeautifier/GFS/: Manager.cs  Utils.cs
VelvetBeautifier/GameBanana/: Argument.cs  Mod.cs  Search.cs  Utils.cs
VelvetBeautifier/GameNews/: Manager.cs  News.cs
VelvetBeautifier/GitHub/: GitHub.cs  GitHubRelease.cs  GitHubUtilities.cs
VelvetBeautifier/Levels/: Manager.cs
cmake/: Configuration.hpp.in
forms/: AboutForm.Designer.cs  AboutForm.cs  AboutForm.resx  AboutWindow.Designer.cs  AboutWindow.resx  DownloadForm.Designer.cs  DownloadForm.cs  DownloadForm.resx  ExtractionForm.Designer.cs  ExtractionForm.cs  ExtractionForm.resx  Forms.csproj  InstallForm.Designer.cs  InstallForm.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  VelvetForms.cs
gfs/: GFSUtils.cs
mod/: Mod.cs  ModInfo.cs  ModManager.cs  Modable.cs
tests/: CMakeLists.txt  bigendian.cpp  gfs.cpp
tfhres/: TFHResourceMod.cs  TFHResourceUtils.cs
utils/: BackupManager.cs  CommandLineResult.cs  Config.cs  DownloadManager.cs  GameBanana.cs  Utils.cs  Velvet.cs
(+74 files in other folders)
